--- a/src/components/navMobile.css
+++ b/src/components/navMobile.css
@@ -5,7 +5,7 @@
   right: 0;
   z-index: 1;
   /* background-color: hsl(0, 0%, 20%); */
-  background-color: black;
+  background-color: #0f172a;
   color: white;
   overflow-x: hidden;
   overflow-y: hidden;
