--- a/src/components/navMobile.css
+++ b/src/components/navMobile.css
@@ -1,4 +1,12 @@
-.removehightlight {
+.navbar {
+  background-color: transparent;
+  transition: background-color 0.5s ease-in-out;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+/* Style for the navbar when scrolled */
+.navbar.scrolled {
+  background-color: #0f172a; /* Change this to your desired color */
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
