--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Style+Script&family=Young+Serif&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Style+Script&family=Young+Serif&display=swap");
+
