--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,3 +1,7 @@
+.footerweb {
+    font-family: 'Playpen Sans', cursive;
+}
+
 .nspin {
     animation: nspin 10s infinite cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
