--- a/src/components/navMobile.css
+++ b/src/components/navMobile.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@300&display=swap');
 .navbar {
   background-color: transparent;
   transition: background-color 0.5s ease-in-out;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  font-family: 'Playpen Sans', cursive;
 }
 
 /* Style for the navbar when scrolled */
@@ -9,6 +11,7 @@
   background-color: #0f172a; /* Change this to your desired color */
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   color: white !important;
+  font-family: 'Playpen Sans', cursive;
 }
 
 .drawer3 {
