--- a/src/components/stringEditor.css
+++ b/src/components/stringEditor.css
@@ -1,3 +1,7 @@
+.stringEditorweb {
+  font-family: 'Playpen Sans', cursive;
+}
+
 .codeBlock {
   background-color: "black" !important;
   padding: "10px";
